@@ -2,23 +2,19 @@ package com.example.contractservice.contract.service;
 
 import static com.example.contractservice.contract.domain.exception.ContractErrorCode.*;
 
-import com.example.contractservice.common.util.UriConstructor;
+import com.example.contractservice.common.util.feign.MemberClient;
 import com.example.contractservice.contract.controller.dto.response.ContractDetailResponse;
 import com.example.contractservice.contract.controller.dto.response.ContractListWithCursorResponse;
+import com.example.contractservice.contract.domain.Contract;
 import com.example.contractservice.contract.domain.exception.ContractException;
-import com.example.contractservice.contract.entity.ContractEntity;
+import com.example.contractservice.contract.domain.vo.ContractInfo;
 import com.example.contractservice.contract.repository.ContractRepository;
 import com.example.contractservice.contract.service.dto.request.ContractDetailRequest;
 import com.example.contractservice.contract.service.dto.request.ContractReadCursorRequest;
-import com.example.contractservice.contract.service.dto.response.MemberInfoResponse;
 import com.example.contractservice.contract.service.dto.response.MemberInfoResponse.MemberInfo;
-import java.net.URI;
-import java.util.Collections;
 import java.util.List;
-import java.util.Optional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
-import org.springframework.web.client.RestTemplate;
 
 @Service
 @RequiredArgsConstructor
@@ -28,25 +24,23 @@ public class ContractReadService {
     private static final int CONTRACT_PARTICIPATION_COUNT = 2;
 
     private final ContractRepository contractRepository;
-    private final UriConstructor uriConstructor;
-    private final RestTemplate restTemplate;
+    private final MemberClient memberClient;
 
     public ContractListWithCursorResponse findAllBy(ContractReadCursorRequest request) {
-        List<ContractEntity> contractEntities = contractRepository.findAllBy(request.memberCode(), request.cursor(),
+        List<Contract> contracts = contractRepository.findAllBy(request.memberCode(), request.cursor(),
                 request.cursorCode(), request.order(), PAGE_SIZE);
 
-        return ContractListWithCursorResponse.of(contractEntities, PAGE_SIZE);
+        return ContractListWithCursorResponse.of(contracts, PAGE_SIZE);
     }
 
     public ContractDetailResponse findDetailBy(ContractDetailRequest request) {
-        ContractEntity contractEntity = contractRepository.findByCode(request.contractCode());
+        Contract contract = contractRepository.findByCode(request.contractCode());
+        ContractInfo contractInfo = contract.getInfo();
 
-        validateMember(request.memberCode(), contractEntity);
+        validateMember(request.memberCode(), contract);
 
-        URI memberInfoUrl = uriConstructor.createMemberInfoUrl(Collections.singletonList(request.memberCode()));
-        List<MemberInfo> memberInfos = Optional.ofNullable(
-                        restTemplate.getForObject(memberInfoUrl, MemberInfoResponse.class))
-                .orElseThrow(() -> new ContractException(INVALID_MEMBER)).members();
+        List<MemberInfo> memberInfos = memberClient.getMemberInfo(List.of(contractInfo.clientCode(), contractInfo.freelancerCode())).data()
+                .internalMemberInfos();
 
         if (memberInfos.size() != CONTRACT_PARTICIPATION_COUNT) {
             throw new ContractException(INVALID_MEMBER_COUNT);
@@ -55,14 +49,16 @@ public class ContractReadService {
         MemberInfo firstMember = memberInfos.get(0);
         MemberInfo secondMember = memberInfos.get(1);
 
-        String clientName = firstMember.code().equals(contractEntity.getClientCode()) ? firstMember.name() : secondMember.name();
-        String freelancerCode = firstMember.code().equals(contractEntity.getFreelancerCode()) ? secondMember.name() : firstMember.name();
+        String clientName = firstMember.memberCode().equals(contractInfo.clientCode()) ? firstMember.nickName() : secondMember.nickName();
+        String freelancerCode = secondMember.memberCode().equals(contractInfo.freelancerCode()) ? secondMember.nickName() : firstMember.nickName();
 
-        return ContractDetailResponse.of(contractEntity, clientName, freelancerCode);
+        return ContractDetailResponse.of(contract, clientName, freelancerCode);
     }
 
-    private void validateMember(String memberCode, ContractEntity contractEntity) {
-        if (contractEntity.getClientCode().equals(memberCode) || contractEntity.getFreelancerCode().equals(memberCode)) { // 요청자/계약자 중 하나에 속한다면 valid
+    private void validateMember(String memberCode, Contract contract) {
+        ContractInfo contractInfo = contract.getInfo();
+
+        if (contractInfo.clientCode().equals(memberCode) || contractInfo.freelancerCode().equals(memberCode)) { // 클라이언트/프리랜서 중 하나에 속한다면 valid
             return;
         }
 
